@@ -1,5 +1,10 @@
 2012-05-04 Riccardo Mottola <rm@gnu.org>
 
+	* GeneralPreference.m
+	When reading preferences, transform in a mutable dictionary since that is what we expect.
+
+2012-05-04 Riccardo Mottola <rm@gnu.org>
+
 	* Bundles/ID3Tag/ID3Tag.m
 	Compare strings with strcmp and not ==
 
